# skills-master

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/skm-cli/: Cargo.toml
crates/skm-cli/src/: main.rs
crates/skm-cli/tests/: import_cmd.rs  init_cmd.rs  status_cmd.rs  sync_cmd.rs
crates/skm-core/: Cargo.toml
crates/skm-core/src/: config.rs  distribution.rs  error.rs  frontmatter.rs  import.rs  init.rs  layout.rs  lib.rs  state.rs  status.rs  sync.rs  tools.rs
crates/skm-test-utils/: Cargo.toml
crates/skm-test-utils/src/: lib.rs
