[workspace]
resolver = "2"
members = [
    "crates/skm-cli",
    "crates/skm-core",
    "crates/skm-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["matt <412383619@qq.com>"]
repository = "https://github.com/matt/skills-master"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.39", features = ["yaml", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
