[package]
name = "skm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "skm — cross-tool AI skills distribution and upgrade manager"

[[bin]]
name = "skm"
path = "src/main.rs"

[dependencies]
skm-core = { path = "../skm-core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
skm-test-utils = { path = "../skm-test-utils" }
